add window function performence issues

--- a/notebooks/pysparkbasics/L02_DataFrame/S04_WindowFunctions/01_WindowFunctionBasics.ipynb
+++ b/notebooks/pysparkbasics/L02_DataFrame/S04_WindowFunctions/01_WindowFunctionBasics.ipynb
@@ -95,6 +95,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local=False\n",
+    "\n",
+    "if local:\n",
+    "    spark = SparkSession.builder.master(\"local[2]\").appName(\"WindowsFunctions\").getOrCreate()\n",
+    "else: \n",
+    "    spark=SparkSession.builder \\\n",
+    "                      .master(\"k8s://https://kubernetes.default.svc:443\") \\\n",
+    "                      .appName(\"WindowsFunctions\") \\\n",
+    "                      .config(\"spark.kubernetes.container.image\",\"inseefrlab/jupyter-datascience:master\") \\\n",
+    "                      .config(\"spark.kubernetes.authenticate.driver.serviceAccountName\",os.environ['KUBERNETES_SERVICE_ACCOUNT']) \\\n",
+    "                      .config(\"spark.kubernetes.namespace\", os.environ['KUBERNETES_NAMESPACE']) \\\n",
+    "                      .config(\"spark.executor.instances\", \"4\") \\\n",
+    "                      .config(\"spark.executor.memory\",\"8g\") \\\n",
+    "                      .config('spark.jars.packages', 'org.apache.spark:spark-sql-kafka-0-10_2.12:3.1.1') \\\n",
+    "                      .getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "pycharm": {
@@ -167,7 +190,6 @@
     }
    ],
    "source": [
-    "spark = SparkSession.builder.master(\"local[2]\").appName(\"Windows functions\").getOrCreate()\n",
     "data = [('Alex', '2018-10-10', 'Paint', 80),\n",
     "        ('Alex', '2018-04-02', 'Ladder', 20),\n",
     "        ('Alex', '2018-06-22', 'Stool', 20),\n",
