add write parquet

--- a/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/01_ReadWritePostgresql.ipynb
+++ b/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/01_ReadWritePostgresql.ipynb
@@ -66,6 +66,7 @@
     "                      .config(\"spark.kubernetes.namespace\", os.environ['KUBERNETES_NAMESPACE']) \\\n",
     "                      .config(\"spark.executor.instances\", \"4\") \\\n",
     "                      .config(\"spark.executor.memory\",\"8g\") \\\n",
+    "                      .config(\"spark.kubernetes.driver.pod.name\", os.environ[\"POD_NAME\"]) \\\n",
     "                      .config('spark.jars.packages','org.postgresql:postgresql:42.2.24') \\\n",
     "                      .getOrCreate()"
    ]
