finish parquet notebook

--- a/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/02_ReadWriteParquetFile.ipynb
+++ b/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/02_ReadWriteParquetFile.ipynb
@@ -9,7 +9,9 @@
     }
    },
    "source": [
-    "# 3.2 Read write parquet files"
+    "# 3.2 Read write parquet files\n",
+    "\n",
+    "The official doc can be found [here](https://spark.apache.org/docs/latest/sql-data-sources-parquet.html). Apache Parquet file is a columnar storage format available to any project in the Hadoop ecosystem, regardless of the choice of data processing framework, data model, or programming language."
    ]
   },
   {
@@ -72,6 +74,21 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.2.1 Read parquet file\n",
+    "\n",
+    "As parquet file contains rich metadata such as schema, compression codec, etc. Reading a parquet requires none configuration (e.g. separator, null_value)\n",
+    "Below command use spark.read.parquet() to read a parquet file. Note the file_path could be a single parquet file or a directory that contains a list of parquet files"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
@@ -194,7 +211,29 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Write parquet with specific partition number"
+    "## 3.2.2 Partition discovering\n",
+    "\n",
+    "In the above example, we read a single parquet file. Now let's read a partitioned parquet file. All built-in file sources (including Text/CSV/JSON/ORC/Parquet) are able to discover and infer partitioning information automatically."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.2.3 Write parquet\n",
+    "\n",
+    "When spark write parquet file, you can set up few options\n",
+    "- save mode : in this tutorial, we only use overwrite mode. For more information. please check [doc](./README.md)\n",
+    "- compression codec:\n",
+    "- partition by column\n",
+    "- mergeSchema\n",
+    "\n",
+    "The output parquet file can be one or more based on the dataframe partitions. Below example show us the different output parquet files when we change partition numbers."
    ],
    "metadata": {
     "collapsed": false,
@@ -205,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
@@ -228,10 +267,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "outputs": [],
    "source": [
-    "output_path=\"data/out_test\"\n",
+    "output_path=\"/tmp/out_test\"\n",
     "df.write.mode(\"overwrite\").parquet(output_path)"
    ],
    "metadata": {
@@ -243,18 +282,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "part-00000-27340c38-d52a-4e2d-a4a7-7a356624f801-c000.snappy.parquet  _SUCCESS\r\n"
+      "total 332K\r\n",
+      "drwxr-xr-x  2 pliu pliu 4.0K Feb 12 06:33 .\r\n",
+      "drwxrwxrwt 26 root root 4.0K Feb 12 06:33 ..\r\n",
+      "-rw-r--r--  1 pliu pliu 314K Feb 12 06:33 part-00000-513396ab-0d8a-4322-8ced-3e3f1c8265e2-c000.snappy.parquet\r\n",
+      "-rw-r--r--  1 pliu pliu 2.5K Feb 12 06:33 .part-00000-513396ab-0d8a-4322-8ced-3e3f1c8265e2-c000.snappy.parquet.crc\r\n",
+      "-rw-r--r--  1 pliu pliu    0 Feb 12 06:33 _SUCCESS\r\n",
+      "-rw-r--r--  1 pliu pliu    8 Feb 12 06:33 ._SUCCESS.crc\r\n"
      ]
     }
    ],
    "source": [
-    "!ls {output_path}"
+    "!ls -lah {output_path}"
    ],
    "metadata": {
     "collapsed": false,
@@ -419,8 +464,19 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Choose compression algo\n",
-    "You can notice, by default spark write parquet file with snappy compression.\n"
+    "## 3.2.4 Write parquet with specific compression algo\n",
+    "You can notice, by default spark write parquet file with snappy compression. But if you want, we can change the default compression codec.\n",
+    "Below are possible compression codec shorten names\n",
+    "- none, uncompressed\n",
+    "- snappy\n",
+    "- gzip\n",
+    "- lzo\n",
+    "- brotli\n",
+    "- lz4\n",
+    "- zstd\n",
+    "\n",
+    "Note they are case-insensitive, and after setup, it will override `spark.sql.parquet.compression.codec`\n",
+    "Note only the snappy, gzip dependencies are included in the spark distribution. If you want to other compression codec, you need to add the dependencies by yourself\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -431,9 +487,431 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "outputs": [],
-   "source": [],
+   "source": [
+    "compression_algo=\"gzip\"\n",
+    "\n",
+    "df.write\\\n",
+    "    .mode(\"overwrite\")\\\n",
+    "    .option(\"parquet.compression\",compression_algo) \\\n",
+    "    .parquet(output_path)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 260K\r\n",
+      "drwxr-xr-x  2 pliu pliu 4.0K Feb 12 06:24 .\r\n",
+      "drwxrwxrwt 26 root root 4.0K Feb 12 06:24 ..\r\n",
+      "-rw-r--r--  1 pliu pliu 242K Feb 12 06:24 part-00000-a56b9b54-2dd7-444a-8116-796d298f439d-c000.gz.parquet\r\n",
+      "-rw-r--r--  1 pliu pliu 1.9K Feb 12 06:24 .part-00000-a56b9b54-2dd7-444a-8116-796d298f439d-c000.gz.parquet.crc\r\n",
+      "-rw-r--r--  1 pliu pliu    0 Feb 12 06:24 _SUCCESS\r\n",
+      "-rw-r--r--  1 pliu pliu    8 Feb 12 06:24 ._SUCCESS.crc\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -lah {output_path}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "You can notice there are three more files\n",
+    "```text\n",
+    "-rw-r--r--  1 pliu pliu 1.9K Feb 12 06:24 .part-00000-a56b9b54-2dd7-444a-8116-796d298f439d-c000.gz.parquet.crc\n",
+    "-rw-r--r--  1 pliu pliu    0 Feb 12 06:24 _SUCCESS\n",
+    "-rw-r--r--  1 pliu pliu    8 Feb 12 06:24 ._SUCCESS.crc\n",
+    "```\n",
+    "These files are the checksum, as spark is a distributed system, jobs may fail. In case job failure, the checksum and metadata will be used to check and rerun the failed jobs\n",
+    "\n",
+    "You can remove them by setting up\n",
+    "```python\n",
+    "spark.conf.set(\"mapreduce.fileoutputcommitter.marksuccessfuljobs\", \"false\")\n",
+    "spark.conf.set(\"parquet.enable.summary-metadata\", \"false\")\n",
+    "```"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.2.5 Write parquet with specific partition\n",
+    "\n",
+    "In section 3.2.3, We only show the partition number, we can do better. Because a good partitioned table(parquet) can help spark to do projection and predicate push down.\n",
+    "\n",
+    "In below column, we will partition the dataframe by using column sex, then race.\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df.write.partitionBy(\"sex\",\"race\").mode(\"overwrite\").parquet(output_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/tmp/out_test:\r\n",
+      "'sex=Female'  'sex=Male'   _SUCCESS\r\n",
+      "\r\n",
+      "'/tmp/out_test/sex=Female':\r\n",
+      "'race=Amer-Indian-Eskimo'  'race=Black'  'race=White'\r\n",
+      "'race=Asian-Pac-Islander'  'race=Other'\r\n",
+      "\r\n",
+      "'/tmp/out_test/sex=Female/race=Amer-Indian-Eskimo':\r\n",
+      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "\r\n",
+      "'/tmp/out_test/sex=Female/race=Asian-Pac-Islander':\r\n",
+      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "\r\n",
+      "'/tmp/out_test/sex=Female/race=Black':\r\n",
+      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "\r\n",
+      "'/tmp/out_test/sex=Female/race=Other':\r\n",
+      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "\r\n",
+      "'/tmp/out_test/sex=Female/race=White':\r\n",
+      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "\r\n",
+      "'/tmp/out_test/sex=Male':\r\n",
+      "'race=Amer-Indian-Eskimo'  'race=Black'  'race=White'\r\n",
+      "'race=Asian-Pac-Islander'  'race=Other'\r\n",
+      "\r\n",
+      "'/tmp/out_test/sex=Male/race=Amer-Indian-Eskimo':\r\n",
+      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "\r\n",
+      "'/tmp/out_test/sex=Male/race=Asian-Pac-Islander':\r\n",
+      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "\r\n",
+      "'/tmp/out_test/sex=Male/race=Black':\r\n",
+      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "\r\n",
+      "'/tmp/out_test/sex=Male/race=Other':\r\n",
+      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n",
+      "\r\n",
+      "'/tmp/out_test/sex=Male/race=White':\r\n",
+      "part-00000-5f34fe08-6254-4ed9-b8f0-1da94abf23c8.c000.snappy.parquet\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -R {output_path}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "You could notice, it generates the below directory. Each directory and subdirectory only contains rows that satisfy the condition(directory name). This will help spark to skipped unnecessary reads.\n",
+    "\n",
+    "```text\n",
+    ".\n",
+    "├── sex=Female\n",
+    "│   ├── race=Amer-Indian-Eskimo\n",
+    "│   ├── race=Asian-Pac-Islander\n",
+    "│   ├── race=Black\n",
+    "│   ├── race=Other\n",
+    "│   └── race=White\n",
+    "├── sex=Male\n",
+    "│   ├── race=Amer-Indian-Eskimo\n",
+    "│   ├── race=Asian-Pac-Islander\n",
+    "│   ├── race=Black\n",
+    "│   ├── race=Other\n",
+    "│   └── race=White\n",
+    "\n",
+    "```"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.2.6 Merge schema\n",
+    "\n",
+    "Like Protocol Buffer, Avro, and Thrift, Parquet also supports schema evolution. Users can start with a simple schema, and gradually add more columns to the schema as needed. In this way, users may end up with multiple Parquet files with different but mutually compatible schemas. The Parquet data source is now able to automatically detect this case and merge schemas of all these files.\n",
+    "\n",
+    "Since schema merging is a relatively expensive operation, and is not a necessity in most cases, we turned it off by default starting from 1.5.0. You may enable it by\n",
+    "\n",
+    "- setting data source option mergeSchema to true when reading Parquet files (as shown in the examples below), or\n",
+    "- setting the global SQL option spark.sql.parquet.mergeSchema to true.\n",
+    "\n",
+    "### merge schema example\n",
+    "\n",
+    "In this example, we create two data frame,\n",
+    "- df1, we have two columns: single, double.\n",
+    "- df2, we have two columns: single, triple\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+------+\n",
+      "|single|double|\n",
+      "+------+------+\n",
+      "|     1|     1|\n",
+      "|     2|     4|\n",
+      "|     3|     9|\n",
+      "|     4|    16|\n",
+      "|     5|    25|\n",
+      "+------+------+\n",
+      "\n",
+      "+------+------+\n",
+      "|single|triple|\n",
+      "+------+------+\n",
+      "|     6|   216|\n",
+      "|     7|   343|\n",
+      "|     8|   512|\n",
+      "|     9|   729|\n",
+      "|    10|  1000|\n",
+      "+------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark import Row\n",
+    "\n",
+    "sc = spark.sparkContext\n",
+    "schema_output_path1= f\"{output_path}/merge_schema/test_table/key=1\"\n",
+    "schema_output_path2= f\"{output_path}/merge_schema/test_table/key=2\"\n",
+    "df1 = spark.createDataFrame(sc.parallelize(range(1, 6)).map(lambda i: Row(single=i, double=i ** 2)))\n",
+    "df1.show()\n",
+    "df2 = spark.createDataFrame(sc.parallelize(range(6, 11)).map(lambda i: Row(single=i, triple=i ** 3)))\n",
+    "df2.show()\n",
+    "# then we write the two data frame in a partition folder, here we put key=1, key=2.\n",
+    "df1.write.parquet(schema_output_path1)\n",
+    "df2.write.parquet(schema_output_path2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Note the above code will generate below parquet files\n",
+    "\n",
+    "```text\n",
+    "merge_schema/\n",
+    "└── test_table\n",
+    "    ├── key=1\n",
+    "    │   ├── part-00000-6ec4cd58-26fd-4398-a910-66eae8699174-c000.snappy.parquet\n",
+    "    │   ├── part-00001-6ec4cd58-26fd-4398-a910-66eae8699174-c000.snappy.parquet\n",
+    "    │   ├── part-00002-6ec4cd58-26fd-4398-a910-66eae8699174-c000.snappy.parquet\n",
+    "    │   ├── part-00003-6ec4cd58-26fd-4398-a910-66eae8699174-c000.snappy.parquet\n",
+    "    │   └── _SUCCESS\n",
+    "    └── key=2\n",
+    "        ├── part-00000-892aa2e3-753f-4ebe-8136-51c735b0a46a-c000.snappy.parquet\n",
+    "        ├── part-00001-892aa2e3-753f-4ebe-8136-51c735b0a46a-c000.snappy.parquet\n",
+    "        ├── part-00002-892aa2e3-753f-4ebe-8136-51c735b0a46a-c000.snappy.parquet\n",
+    "        ├── part-00003-892aa2e3-753f-4ebe-8136-51c735b0a46a-c000.snappy.parquet\n",
+    "        └── _SUCCESS\n",
+    "\n",
+    "```\n",
+    "\n",
+    "If we read the parent folder(merge_schema) that contains the partitioned folder(test_table/key=1,key=2). The partition key become a column name, we call it partitioned column.\n",
+    "\n",
+    "As the data frame in each partition folder has different schema, we need to set mergeSchema to true. Otherwise, it will only use the schema\n",
+    "of the first parquet file which it reads. It will drop all columns in other parquet files that do not exist in the schema. Check the below data frame."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- single: long (nullable = true)\n",
+      " |-- double: long (nullable = true)\n",
+      " |-- key: integer (nullable = true)\n",
+      "\n",
+      "+------+------+---+\n",
+      "|single|double|key|\n",
+      "+------+------+---+\n",
+      "|     9|  null|  2|\n",
+      "|    10|  null|  2|\n",
+      "|     4|    16|  1|\n",
+      "|     5|    25|  1|\n",
+      "|     6|  null|  2|\n",
+      "|     8|  null|  2|\n",
+      "|     7|  null|  2|\n",
+      "|     1|     1|  1|\n",
+      "|     2|     4|  1|\n",
+      "|     3|     9|  1|\n",
+      "+------+------+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "parent_path=f\"{output_path}/merge_schema/test_table\"\n",
+    "# note by default mergeSchema is set to false, no need to add it. We add it only for clarity fo the example\n",
+    "unmergedDF = spark.read.option(\"mergeSchema\", \"false\").parquet(parent_path)\n",
+    "unmergedDF.printSchema()\n",
+    "unmergedDF.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "You could notice it only has three column single, double, key. The two first column come from the first parquet partition schema. The column key indicate the row value is from parquet partition 1 or 2.\n",
+    "\n",
+    "Now let's try to set `mergeSchema` to true. You can notice the mergedDF has four columns right now."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- single: long (nullable = true)\n",
+      " |-- double: long (nullable = true)\n",
+      " |-- triple: long (nullable = true)\n",
+      " |-- key: integer (nullable = true)\n",
+      "\n",
+      "+------+------+------+---+\n",
+      "|single|double|triple|key|\n",
+      "+------+------+------+---+\n",
+      "|     9|  null|   729|  2|\n",
+      "|    10|  null|  1000|  2|\n",
+      "|     4|    16|  null|  1|\n",
+      "|     5|    25|  null|  1|\n",
+      "|     6|  null|   216|  2|\n",
+      "|     8|  null|   512|  2|\n",
+      "|     7|  null|   343|  2|\n",
+      "|     1|     1|  null|  1|\n",
+      "|     2|     4|  null|  1|\n",
+      "|     3|     9|  null|  1|\n",
+      "+------+------+------+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "mergedDF = spark.read.option(\"mergeSchema\", \"true\").parquet(parent_path)\n",
+    "mergedDF.printSchema()\n",
+    "mergedDF.show()"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
